# otimizacao

./: CMakeLists.txt  README.md  test
cmb/: cmb01  cmb02  test.txt
results/: Gráficos.xlsx  iteracoes.txt  iteracoes_old.txt  resfriamento2.txt  temp_max.txt  temp_max_old.txt  test.txt
results/Instâncias/: cmb01  cmb02  cmb03  cmb04  cmb05  cmb06  cmb07  cmb08  cmb09  cmb10
results/Parâmetros/: Iteracoes  TaxaResfriamento  TempMaxima  TempMinima
results/old (ignore)/: resfriamento.txt  resfriamento1.txt  temp_min.txt  temp_min_old.txt  test.txt
solver/: solver.jl
src/: main.cpp
src/file/: file.cpp  file.hpp
src/heuristica/: SA.cpp  SA.hpp
